--- a/style.ini
+++ b/style.ini
@@ -42,8 +42,10 @@ css/plugins/bureaucracy.less   = all
 css/plugins/data.less          = all
 css/plugins/database2.less     = all
 css/plugins/datatables.less    = all
+css/plugins/diagrams.less      = all
 css/plugins/dir.less           = all
 css/plugins/discussion.less    = all
+css/plugins/dropfiles.less     = all
 css/plugins/inlinetoc.less     = all
 css/plugins/linkback.less      = all
 css/plugins/move.less          = all
@@ -54,6 +56,9 @@ css/plugins/struct.less        = all
 css/plugins/tag.less           = all
 css/plugins/tagging.less       = all
 css/plugins/translation.less   = all
+css/plugins/structgantt.less   = all
+css/plugins/vshare.less        = all
+css/plugins/codemirror.less    = all
 
 ; Print styles
 css/print.less                 = print
