add approve plugin styles

--- a/style.ini
+++ b/style.ini
@@ -38,6 +38,7 @@ css/bs4-utilities.less         = all
 
 ; Plugins styles
 css/plugins/addnewpage.less    = all
+css/plugins/approve.less       = all
 css/plugins/bureaucracy.less   = all
 css/plugins/data.less          = all
 css/plugins/database2.less     = all
