--- a/style.ini
+++ b/style.ini
@@ -37,29 +37,30 @@ css/replacements.less          = all
 css/bs4-utilities.less         = all
 
 ; Plugins styles
-css/plugins/addnewpage.less    = all
-css/plugins/approve.less       = all
-css/plugins/bureaucracy.less   = all
-css/plugins/data.less          = all
-css/plugins/database2.less     = all
-css/plugins/datatables.less    = all
-css/plugins/diagrams.less      = all
-css/plugins/dir.less           = all
-css/plugins/discussion.less    = all
-css/plugins/dropfiles.less     = all
-css/plugins/inlinetoc.less     = all
-css/plugins/linkback.less      = all
-css/plugins/move.less          = all
-css/plugins/overlay.less       = all
-css/plugins/publish.less       = all
-css/plugins/simplenavi.less    = all
-css/plugins/struct.less        = all
-css/plugins/tag.less           = all
-css/plugins/tagging.less       = all
-css/plugins/translation.less   = all
-css/plugins/structgantt.less   = all
-css/plugins/vshare.less        = all
-css/plugins/codemirror.less    = all
+css/plugins/addnewpage.less       = all
+css/plugins/approve.less          = all
+css/plugins/bureaucracy.less      = all
+css/plugins/data.less             = all
+css/plugins/database2.less        = all
+css/plugins/datatables.less       = all
+css/plugins/diagrams.less         = all
+css/plugins/dir.less              = all
+css/plugins/discussion.less       = all
+css/plugins/dropfiles.less        = all
+css/plugins/inlinetoc.less        = all
+css/plugins/linkback.less         = all
+css/plugins/move.less             = all
+css/plugins/overlay.less          = all
+css/plugins/publish.less          = all
+css/plugins/simplenavi.less       = all
+css/plugins/struct.less           = all
+css/plugins/tag.less              = all
+css/plugins/tagging.less          = all
+css/plugins/translation.less      = all
+css/plugins/structgantt.less      = all
+css/plugins/vshare.less           = all
+css/plugins/codemirror.less       = all
+css/plugins/elasticsearch.less    = all
 
 ; Print styles
 css/print.less                 = print
